--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "Boilerplate webpack",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "glslify-loader": "^2.0.0",
+    "raw-loader": "^3.0.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
