--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Boilerplate webpack",
   "main": "index.js",
   "dependencies": {
+    "camera-controls": "^1.12.2",
     "glslify-loader": "^2.0.0",
     "raw-loader": "^3.0.0"
   },
